--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="pt-br">
-	<title></title>
+	<title>Beng - Início</title>
 	<meta charset="utf-8">
 	<!--Folhas de estilo css-->
 	<link rel="stylesheet" type="text/css" href="./fontawesome-free-5.0.13/web-fonts-with-css/css/fontawesome-all.min.css">
@@ -14,7 +14,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <a class="navbar-brand" href="/home"> 
         <h1 class="display-5 text-left" style="color: #de85d5;">Beng</h1>
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto ">
             <li class="nav-item ">
-                <a class="nav-link" href="/home">Início</a>
+                <a class="nav-link" href="home.html">Início</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/acesso?t=l">Decorações</a>
+                <a class="nav-link" href="#">Decorações</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="#">Bijuterias</a>
@@ -41,10 +41,10 @@
                     <a class="nav-link" href="#">Bolsas</a>
             </li>
             <li class="nav-item">
-                    <a class="nav-link" href="#">Conheça</a>
+                    <a class="nav-link" href="conheca.html">Conheça</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
+                <a class="nav-link" href="contato.html">Contato</a>
             </li>
             <li class="nav-item">
                     <a class="nav-face-link" href="#"><i class="fab fa-facebook-f"></i>&nbsp;</a>
